bump deploy-pages to v5, fix iframe url overflow on mobile

--- a/_sass/core.scss
+++ b/_sass/core.scss
@@ -1313,6 +1313,10 @@ figure {
                 font-style: italic;
                 bottom: 1rem;
                 font-size: var(--text-sm);
+                padding: 0 1rem;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
             }
         }
     }
